# EazyStartCL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
EazyStart/: Agreement.md  CMakeLists.txt  cloc.bat
EazyStart/include/EazyStart/: ezs.h  io.h  time.h  tools.h
EazyStart/include/EazyStart/io/: input.h  print.h
EazyStart/include/EazyStart/time/: benchmark.h  clock.h
EazyStart/include/EazyStart/tools/: random.h
EazyStart/src/io/: input.c  print.c
EazyStart/src/time/: benchmark.c  clock.c
EazyStart/src/tools/: charset.c  random.c
